// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeFetchOpts handles a community 1`] = `
Object {
  "search": "fee",
  "slug": "comslug",
  "sortBy": "join",
  "subject": "community",
}
`;

exports[`makeFetchOpts handles a network 1`] = `
Object {
  "search": "fee",
  "slug": "netslug",
  "sortBy": "name",
  "subject": "network",
}
`;

exports[`makeFetchOpts handles no community or network 1`] = `
Object {
  "search": "fee",
  "slug": "all-communities",
  "sortBy": "join",
  "subject": "all-communities",
}
`;

exports[`mapDispatchToProps returns the right keys 1`] = `
Object {
  "fetchMembers": [Function],
  "setSearch": [Function],
  "setSort": [Function],
  "showMember": [Function],
}
`;

exports[`mapStateToProps handles null value for lastViewedCommunity 1`] = `
Object {
  "canModerate": true,
  "community": SessionBoundModel {
    "_fields": Object {
      "id": 10,
      "slug": "tom",
    },
    "slug": "tom",
  },
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": 123,
    },
    "id": 123,
  },
  "fetchOpts": Object {
    "search": undefined,
    "slug": undefined,
    "sortBy": undefined,
    "subject": "network",
  },
  "hasMore": undefined,
  "isAll": false,
  "members": Array [],
  "network": Object {
    "id": undefined,
  },
  "pending": undefined,
  "search": undefined,
  "slug": undefined,
  "sortBy": undefined,
  "sortKeys": Object {
    "location": "Location",
    "name": "Name",
  },
  "subject": "network",
}
`;
